src/app/layout/sidebar/sidebar.component.scss
@import "../../../styles/variables.scss";
@import "~bootstrap/scss/functions";
@import "~bootstrap/scss/variables";
@import "~bootstrap/scss/mixins/breakpoints";

:host {
  background-color: #{$main-dark};
  box-shadow: 2px 0px 5px 0px rgb(0 0 0 / 0.15);
  width: 10em;
  position: fixed;
  left: 0;
  top: 0;
  bottom: 0;
  transition: 250ms all;

  & > .list-group {
    & > .nav--logo {
      border-radius: 50rem;
      background-color: #{$main-bg};
      overflow: hidden;
      width: 4rem;
    }

    & > .nav-divider {
      background-color: rgb(87, 87, 87);
      opacity: 0.5;
      height: 2px;
      width: calc(100% - 50%);
    }

    & > li {
      list-style-type: none;
    }

    & > .list-group-item {
      background: transparent;
      margin-bottom: 1rem;
      margin-top: 1rem;
      border: unset;

      & > .nav-link {
        color: rgb(204, 204, 204);
        opacity: 0.5;
        transition: 250ms all;
        font-size: 1.3rem;

        &:hover,
        &:focus,
        &.active {
          color: #fff;
          opacity: 1;
        }
      }
    }
  }

  .ion {
    font-size: 1.5rem;
  }
}

